# docker-pre-commit-universal

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
docker_pre_commit_universal/: compose_check.py
