[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docker_pre_commit_universal"]

[project]
name = "docker_pre_commit_universal"
version = "4.0.2"

[project.scripts]
compose_check = "docker_pre_commit_universal.compose_check:main"

[tool.ruff]
extend-include = ["compose-check.py"]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S603", "S607", "T201", "UP022", "BLE001"]
flake8-quotes.inline-quotes = "single"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
quote-style = "single"
